working on colors

--- a/css/main.styl
+++ b/css/main.styl
@@ -42,7 +42,6 @@ html, body
       rect 100%
       nw 0
 
-
 svg
   max-rect 128*gs
   display block
@@ -62,6 +61,8 @@ svg
 .caleydoscope
   path
     opacity 0
+    stroke white
+    stroke-width 50px
 
 .svg-letter
   fill none
