--- a/index.jade
+++ b/index.jade
@@ -9,10 +9,14 @@ html
     - var rand = function(min, max){
     -  return Math.floor((Math.random() * ((max + 1) - min)) + min)
     - }
-    - var colors = ['deeppink', 'deeppink', '#17F7B9', '#562E74', '#E1E44A', '#6F77B1', '#9E3375', 'deeppink']
+    //- - var colors = [ '#00C4FF', '#9013FE', '#FA1C46', 'deeppink', '#17F7B9', '#562E74', '#E1E44A', '#6F77B1', '#9E3375']
+    - var colors = [ '#00C4FF', '#9013FE', '#FA1C46', '#17f7b9' ]
     - var randColor = function() {
     -   return colors[rand(0, colors.length-1)]
     - }
+
+    - var dustColor = '#222';
+    - var dustOpacity = 0.5;
     
     .container
       .container__inner
@@ -24,9 +28,7 @@ html
         svg(viewBox="0 0 1280 900").z-hack
           include parts/triangles
           include parts/tri-bits
-
         svg(viewBox="0 0 1280 900").z-hack
-          
           include parts/logo.svg
           include parts/waves.svg
           include parts/fish
