--- a/parts/caleydoscope.jade
+++ b/parts/caleydoscope.jade
@@ -27,7 +27,7 @@ g#js-entire-caleydoscope.h-g
     rect(width="80px", height="450px", transform="rotate(-35) translate(0, 0)")
     rect(width="20px",  height="450px", transform="rotate(-35) translate(-40, 0)", opacity=".85")
 
-  g#js-velocity-text(transform="translate(470,425)", fill-rule='evenodd', fill="#E1E44A").h-g
+  g#js-velocity-text(transform="translate(470,425)", fill-rule='evenodd', fill="#edf23b").h-g
     path#Path(d='M50.542,10.419 L62.479,10.419 L62.479,0.828 L39.571,0.828 L39.571,50.094 L62.479,50.094 L62.479,40.503 L50.542,40.503 L50.542,29.739 L59.029,29.739 L59.029,20.148 L50.542,20.148 L50.542,10.419 Z')
     path#Path(d='M78.59,0.828 L67.619,0.828 L67.619,50.094 L89.837,50.094 L89.837,40.503 L78.59,40.503 L78.59,0.828 Z')
     path#Path(d='M110.916,-5.68434189e-14 C96.081,-5.68434189e-14 94.977,7.59 94.977,25.53 C94.977,44.091 96.081,50.922 110.916,50.922 C125.751,50.922 126.855,44.091 126.855,25.53 C126.855,7.59 125.751,-5.68434189e-14 110.916,-5.68434189e-14 Z M110.916,9.591 C114.366,9.591 114.78,12.144 114.78,25.53 C114.78,39.192 114.366,41.331 110.916,41.331 C107.466,41.331 107.052,39.192 107.052,25.53 C107.052,12.144 107.466,9.591 110.916,9.591 Z')
