--- a/parts/tri-bits.jade
+++ b/parts/tri-bits.jade
@@ -1,4 +1,4 @@
-- var color = ['#E01A3B', '#9EA64D', '#FF1493', '#E01A3B', '#9EA64D']
+- var color = ['#FF822C', '#93D0B7', '#F33E51', '#ffee54', '#d6f23e' ]
 
 - function randColor() {
 - return color[rand(0, color.length-1)]
