--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -36,7 +36,7 @@ defs
 -}
 
 - var colors = [ '#88C378', '#E0EFF7', '#F8CDDA' ]
-- var colors = ['#EA0004', '#92F5B8', '#FF1493', '#E01A3B', '#9EA64D']
+- var colors = ['#EA0004', '#92F5B8', '#FF1493', '#E01A3B']
 - var randColor = function() {
 -   return colors[rand(0, colors.length-1)]
 - }
